--- a/thinking-in-spring/spring-bean/pom.xml
+++ b/thinking-in-spring/spring-bean/pom.xml
@@ -32,6 +32,18 @@
             <artifactId>ioc-container-overview</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>11</source>
+                    <target>11</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
