--- a/thinking-in-spring/dependency-lookup/pom.xml
+++ b/thinking-in-spring/dependency-lookup/pom.xml
@@ -10,4 +10,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>dependency-lookup</artifactId>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.geekbang</groupId>
+            <artifactId>ioc-container-overview</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 </project>
