singleton prototype 作用域范围

--- a/thinking-in-spring/pom.xml
+++ b/thinking-in-spring/pom.xml
@@ -15,12 +15,14 @@
         <module>dependency-lookup</module>
         <module>dependency-injection</module>
         <module>dependency-source</module>
+        <module>bean-scope</module>
     </modules>
 
     <properties>
         <spring.version>5.2.7.RELEASE</spring.version>
     </properties>
 
+    <!--Spring 依赖-->
     <dependencies>
         <!-- spring ioc container 核心容器-->
         <dependency>
@@ -28,7 +30,23 @@
             <artifactId>spring-context</artifactId>
             <version>${spring.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jdbc</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webflux</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
     </dependencies>
+
     <build>
         <plugins>
             <plugin>
