--- a/thinking-in-spring/bean-scope/pom.xml
+++ b/thinking-in-spring/bean-scope/pom.xml
@@ -22,6 +22,20 @@
         </dependency>
 
         <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-commons</artifactId>
+            <version>2.2.4.RELEASE</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-context</artifactId>
+            <version>2.2.4.RELEASE</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
             <groupId>org.geekbang</groupId>
             <artifactId>ioc-container-overview</artifactId>
             <version>1.0-SNAPSHOT</version>
