--- a/thinking-in-spring/bean-lifecycle/pom.xml
+++ b/thinking-in-spring/bean-lifecycle/pom.xml
@@ -15,6 +15,12 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-beans</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.geekbang</groupId>
             <artifactId>ioc-container-overview</artifactId>
             <version>1.0-SNAPSHOT</version>
