xml自定义扩展

--- a/thinking-in-spring/configuration-metadata/pom.xml
+++ b/thinking-in-spring/configuration-metadata/pom.xml
@@ -20,4 +20,16 @@
         </dependency>
     </dependencies>
 
+    <build>
+        <resources>
+            <resource>
+                <targetPath>/</targetPath>
+                <filtering>false</filtering>
+                <directory>${basedir}/src/main/java</directory>
+                <includes>
+                    <include>**/*.xsd</include>
+                </includes>
+            </resource>
+        </resources>
+    </build>
 </project>
