--- a/thinking-in-spring/configuration-metadata/pom.xml
+++ b/thinking-in-spring/configuration-metadata/pom.xml
@@ -14,6 +14,12 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.yaml</groupId>
+            <artifactId>snakeyaml</artifactId>
+            <version>1.18</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.geekbang</groupId>
             <artifactId>ioc-container-overview</artifactId>
             <version>1.0-SNAPSHOT</version>
