--- a/thinking-in-spring/annotation/pom.xml
+++ b/thinking-in-spring/annotation/pom.xml
@@ -13,4 +13,12 @@
     <artifactId>annotations</artifactId>
 
 
+    <dependencies>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>ioc-container-overview</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+    </dependencies>
+
 </project>
